# WiFi-Tools

Entropy/: .cproject  .project  entropy.cpp
PHY-rate/: .cproject  .project  PHY_TPUT.cpp  Ratetable.cpp  Ratetable.h  Readme
PHY-rate/Debug/: PHY_TPUT  PHY_TPUT.d  Ratetable.d  makefile  subdir.mk
trace-processor/: Makefile  Readme  trace-processor.cpp
transmission-time/: .cproject  .project  80211n_rates  CMakeLists.txt  changelog  efficiency.cpp  readme  tim notes - 5Mar  transmission-time.cpp
transmission-time/Debug/: Transmission-time  compute-round-time.sh~  makefile  temp
transmission-time/mjacob/: CMakeLists.txt  out_32_2_2000  out_32_2_2000.ps  out_32_4_1000  out_32_4_1000.ps  out_32_4_4000  out_32_4_4000.ps  rate-configs.c  rate-configs.h  rates.c  rates.h  readme  sample_output  tim_meeting_notes  transmission-time.cpp  transmission-time.cpp~
transmission-time/mjacob/Debug/: Transmission-time  subdir.mk  transmission-time.d
